minor config changes

--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,6 @@ disableHugoGeneratorInject = false
 
 [taxonomies]
   tag      = "tags"
-  series   = "series"
 
 [params]
   dateform        = "Jan 2, 2006"
@@ -53,17 +52,17 @@ disableHugoGeneratorInject = false
   dateformNumTime = "2006-01-02 15:04 -0700"
 
   # Metadata mostly used in document's head
-  description = "Nice theme for homepages and blogs"
+  description = ""
   keywords = ""
   images = [""]
 
-  homeSubtitle = ""
+  homeSubtitle = "A place for me to write about stuff!"
 
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   # gitUrl = ""
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
-  disableReadOtherPosts = false
+  disableReadOtherPosts = true
 
   # Integrate Javascript files or stylesheets by adding the url to the external assets or by
   # linking local files with their path relative to the static folder, e.g. "css/styles.css"
@@ -129,7 +128,3 @@ disableHugoGeneratorInject = false
     identifier = "posts"
     name       = "Posts"
     url        = "posts/"
-  [[menu.main]]
-    identifier = "series"
-    name       = "Series"
-    url        = "series/"
